# sonarr-metadata-rewrite

./: .dockerignore  .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  image_rewrite_plan.md  missing_test_cases.md  pyproject.toml  sample_formats.md  tach.toml  vulture_whitelist.py
.agents/skills/github-release-key-changes/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docker-build-reusable.yml  release.yml
backups/: gen_v.nfo  test_external_id.nfo  tvshow.nfo
docs/adr/: 0001-tmdb-response-cache.md
docs/design/: radarr-movie-support.md
root/etc/s6-overlay/s6-rc.d/sonarr-metadata-rewrite/: run
root/etc/s6-overlay/s6-rc.d/user/contents.d/: sonarr-metadata-rewrite
scripts/: combine-coverage.sh  lint.sh  run-integration-tests.sh  run-unit-tests.sh  setup-dev.sh
src/sonarr_metadata/: config.py  main.py
src/sonarr_metadata_rewrite/: __init__.py  backup_utils.py  config.py  file_monitor.py  file_scanner.py  file_utils.py  image_processor.py  image_utils.py  main.py  metadata_formats.py  metadata_processor.py  models.py  nfo_utils.py  retry_utils.py  rewrite_service.py  rollback_service.py  translator.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_docker_container.py  test_file_ownership.py  test_helpers.py  test_metadata_formats.py  test_radarr_integration.py  test_sonarr_integration.py  test_translator_integration.py
tests/integration/fixtures/: __init__.py  arr_client.py  base_process_manager.py  container_manager.py  docker_service_manager.py  movie_manager.py  radarr_client.py  sample_episode.mkv  series_manager.py  sonarr_client.py  subprocess_service_manager.py
tests/unit/: __init__.py  conftest.py  test_backup_utils.py  test_config.py  test_file_monitor.py  test_file_scanner.py  test_file_utils.py  test_image_processor.py  test_image_utils.py  test_integration_fixtures.py  test_main.py  test_metadata_formats.py  test_metadata_processor.py  test_metadata_processor_formats.py  test_models.py  test_nfo_utils.py  test_rewrite_service.py  test_rollback_service.py  test_translator.py
